2007-03-19  Juan M. Guerrero  <juan.guerrero@gmx.de>

	* config.h: Undef HAVE_ALLOCA for DJGPP.
	* Makefile: Add floatcomp$O to AWKOBJS1 and PAWKOBJS1.

2007-02-25  Juan M. Guerrero  <juan.guerrero@gmx.de>

	* config.h: Let DEFPATH reflect DJGPP installation directory tree.
	* Makefile: pkgdatadir variable defined to $(prefix)/lib/awk.
	* Makefile: In DJGPP section use the DJGPP environment variable to
	  redefine the pkgdatadir variable.

2006-07-22  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.tst: Update copyright years.
	(COMSPEC): If it's empty, use ComSpec instead.
	(CMP): Ignore white space differences.
	(BASIC_TESTS): Add concat4, nofile, ovrflow1, subi18n.
	(GAWK_EXT_TESTS): Add binmode1, devfd1, devfd2, fwtest, nondec2.
	(msg): Use $(CMP) instead of literal "cmp".
	(inftest): Uncomment the test.
	(nonl): Use NUL, so it works with any DOS/Windows shell.
	(fsspcoln): Run `head' though the system shell.
	(nondec2, nofile, binmode1, subi18n, concat4, devfd1, devfd2)
	(ovrflow1, fwtest, mixed1): New tests.
	(fmttest, hsprint, ovrflow1, posix): Run output through Sed to
	adjust the number of leading zeros in the exponent produced by %e.
	(longwrds): Set SORT to just "sort".
	(exitval2): Use exitval2.w32.

2006-07-01  Eli Zaretskii  <eliz@gnu.org>

	* popen.h (os_popen): Declare 1st argument "const char *".

	* popen.c (scriptify): Declare argument "const char *".
	(os_system): Declare argument "const char *".  Add a new local
	variable cmd1 to hold the results of scriptify.
	(os_popen): Declare 1st argument "const char *".  Add a new local
	variable cmd to hold the results of scriptify.

	* Makefile (mingw32): Update definitions for CF, LF, and LF2.  Use
	libmsvcrtp60 during linking (for multibyte and wide character
	support).
	(io$O): Depend on popen.h.

	* config.h (HAVE_BTOWC) [_WIN32]: Define.
	(HAVE_INTMAX_T, HAVE_UINTMAX_T, HAVE_INTTYPES_H, HAVE_STDINT_H)
	(HAVE_INTTYPES_H_WITH_UINTMAX, HAVE_ISASCII, HAVE_ISWCTYPE)